--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(SpaceInvadersServer C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(SpaceInvadersServer main.c)
+add_executable(SpaceInvadersServer Server.c Socket.h Socket_Servidor.h)
